# secretsanta

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  app.py  auth.py  config.py  db.py  gifts.py  init_db.py  link_preview.py  pairing.py  pyproject.toml
frontend/: Dockerfile  README.md  deploy_frontend.sh  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  base.css  fetchUtils.js
frontend/src/pages/: GiftListsPage.jsx  IndexPage.jsx  gift_lists.css  index.css
nginx/: secretsanta
scripts/: build_and_copy_frontend.sh
